Remove _index field from documents table.